Bug 1198563 part 1 - Encapsulate iterating fullscreen request list code. r=smaug

--HG--
extra : source : 6cd137c01c101c3dd10f30056fac255c38332eed